--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,15 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+body{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(
+      to top,
+      rgb(218, 219, 211) 0%,
+      rgb(218, 219, 211) 80%,
+      rgb(0, 150, 136) 80%,
+      rgb(0, 150, 136) 100%
+    );
+  } 
+
