--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,47 @@ body{
       );
     
   } 
-
+/* LAYOUT */
 main{
     width: 100%;
     height: 90vh;
     background-color: aliceblue;
   }
+/* left part main layout*/
+.left{
+    width: 30%;
+}
+.user{
+    min-height: 10%;
+    background-color: aqua;
+}
+.notification{
+    min-height: 10%;
+    background-color: green;
+}
+.serch{
+    min-height: 5%;
+    background-color: pink;
+}
+.contacts{
+    min-height: 75%;
+    background-color: orange;
+}
+
+/* right part main layout */
+.right{
+    width:70%;
+}
+
+.message-contact{
+    min-height: 10%;
+    background-color: yellow;
+}
+.message{
+    min-height: 80%;
+    background-color: white;
+}
+.typing{
+    min-height: 10%;
+    background-color: yellow;
+}
