--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ img{
     height: auto;
     display: block;
 }
+p{
+    margin:0px;
+}
 .avatar-img {
     width: 70px;
     height: 70px;
@@ -39,6 +42,7 @@ main{
 /* left part main layout*/
 .left{
     width: 30%;
+    border-right: 1px solid blue;
 }
 .user{
     min-height: 10%;
@@ -76,13 +80,21 @@ main{
 
 .message-contact{
     min-height: 10%;
-    background-color: yellow;
+    background-color: #eaeaea;
 }
 .message{
     min-height: 80%;
-    background-color: white;
+    background-image: url("../img/mine.jpg");
+    overflow-y: scroll;
 }
 .typing{
     min-height: 10%;
-    background-color: yellow;
+    background-color: #f3eeea;
+}
+.input{
+    width: 50vw;
+    height: 5vh;
+    border: 0px transparent solid;
+    border-radius: 12px;
+    padding: 20px;
 }
