--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,9 @@ main{
     min-height: 10%;
     background-color: #8edafc;
 }
+.p-size{
+    font-size: 13px;
+}
 #icon{
     position: relative;
     top: 8px;
@@ -59,6 +62,7 @@ main{
 }
 .underline{
     text-decoration: underline;
+    color: gray;
 }
 .serch{
     min-height: 5%;
