--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ main{
     background-color: #f3eeea;
 }
 .input{
-    width: 50vw;
+    width: 650px;
     height: 5vh;
     border: 0px transparent solid;
     border-radius: 12px;
