--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ main{
     border-radius: 15px;
 }
 .date-message{
-    
+    color: #b1b1b1;
     font-size: 12px;
 }
 /* writing new message */
